<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Local_database"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="75dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="143dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="300px"
        android:layout_marginStart="82dp"
        android:layout_marginLeft="109dp"
        android:layout_marginTop="59dp"
        android:fontFamily="Montserrat"
        android:text="Register"
        android:textAlignment="center"
        android:textAppearance="@style/login"
        android:textFontWeight="800"
        android:textSize="85px" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="262dp"
        android:layout_height="83dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="100px"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="109dp"
        android:fontFamily="Montserrat"
        android:text="with Local Database"
        android:textAlignment="center"
        android:textAppearance="@style/with_local_"
        android:textFontWeight="500"
        android:textSize="65px" />

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="330dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="209dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/edittext_box" />

    <View
        android:id="@+id/user"
        android:layout_width="35dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="219dp"
        android:background="@drawable/user" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="223dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="Full Name"
        android:inputType="textPersonName"
        android:visibility="visible" />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="278dp"
        android:background="@drawable/edittext_box" />

    <View
        android:id="@+id/user2"
        android:layout_width="35dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="285dp"
        android:background="@drawable/mail" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="61dp"
        android:layout_marginTop="291dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="textPersonName"
        android:visibility="visible" />

    <View
        android:id="@+id/user3"
        android:layout_width="25dp"
        android:layout_height="27dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="362dp"
        android:background="@drawable/password" />

    <View
        android:id="@+id/rectangle_3"
        android:layout_width="331dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/edittext_box" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="364dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textWebPassword"
        android:visibility="visible" />

    <ImageButton
        android:id="@+id/button"
        android:layout_width="339dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="427dp"
        android:background="@drawable/signup" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="509dp"
        android:text="@string/already_account"
        android:textColor="#F95A2C"
        android:textFontWeight="600"
        android:textSize="40px" />

</RelativeLayout>